--- a/templates/tournament-info.html
+++ b/templates/tournament-info.html
@@ -54,6 +54,12 @@
 					</tr>
 				</table>
 			</div>
+
+			<div class="col-xs-4 col-md-4">
+				<img ng-src="{{tournament.logo}}" 
+					 style="text-align:center; vertical-align:middle; max-width:400px; max-height:400px; padding: 50px;"/>
+				</div>
+
 		</div>
 
 		<div class="row">
