added day name to prettyprintDatestamp filter

--- a/templates/tournament-info.html
+++ b/templates/tournament-info.html
@@ -18,7 +18,7 @@
 				<table class="table">
 					<tr>
 						<td>Dato:</td>
-						<td>{{tournament.date | prettyPrintDatestamp}}</td>
+						<td>{{tournament.date | prettyprintDatestamp}}</td>
 					</tr>
 					<tr>
 						<td>Dager igjen:</td>
@@ -26,7 +26,7 @@
 					</tr>
 					<tr>
 						<td>Påmeldingsfrist:</td>
-						<td>{{tournament.registrationDeadline | prettyPrintDatestamp}}</td>
+						<td>{{tournament.registrationDeadline | prettyprintDatestamp}}</td>
 					</tr>
 					<tr>
 						<td>Antall påmeldte:</td>
