--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -13,8 +13,8 @@
 	</ul>
 
 	<div class="panel panel-body">
-		<div class="row">
-			<div class="col-xs-6 col-md-6" ui-view></div>
+		<div class="row" ui-view>
+			
 		</div>
 	</div>
 </div>
