--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -1,12 +1,8 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<b class="panel-title"></b>
-		<div class="pull-right">
-	  		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#paameldingModal">Meld på</button>
-	    </div>
-	</div>
-	
-	<ul class="nav nav-tabs">
+		<b class="panel-title"><h2><b>{{tournament.name}}</b></h2></b>
+		
+	<ul class="nav nav-pills">
 		<li ng-class="{true: 'active'}[selectedTab === 'info']">
 			<a href="#tournament/{{tournament.id}}/info" data-toggle="tab">Informasjon</a>
 		</li>
@@ -16,7 +12,11 @@
 		<li ng-class="{true: 'active'}[selectedTab === 'live']">
 			<a href="#tournament/{{tournament.id}}/live-results" data-toggle="tab">Live resultater</a>
 		</li>
+		<li ng-class="{true: 'active'}[selectedTab === 'signup']"  class="info">
+			<a href="#tournament/{{tournament.id}}/live-results" data-toggle="tab"><b>Påmelding</b></a>
+		</li>
 	</ul>
+	</div>
 
 	<div class="panel panel-body" ui-view></div>
 </div>
