--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -3,17 +3,17 @@
 		<b class="panel-title"><h2><b>{{tournament.name}}</b></h2></b>
 		
 	<ul class="nav nav-pills">
-		<li ng-class="{true: 'active'}[selectedTab === 'info']">
-			<a href="#tournament/{{tournament.id}}/info" data-toggle="tab">Informasjon</a>
+		<li ng-class="{true: 'active'}[selectedTab === 'info' || !selectedTab]">
+			<a ui-sref="tournament.info({tournamentId: tournament.id})" data-toggle="tab">Informasjon</a>
 		</li>
 		<li ng-class="{true: 'active'}[selectedTab === 'players']">
-			<a href="#tournament/{{tournament.id}}/players" data-toggle="tab">Påmeldte</a>
+			<a ui-sref="tournament.players" data-toggle="tab">Påmeldte</a>
 		</li>
 		<li ng-class="{true: 'active'}[selectedTab === 'live']">
-			<a href="#tournament/{{tournament.id}}/live-results" data-toggle="tab">Live resultater</a>
+			<a ui-sref="tournament.live" data-toggle="tab">Live resultater</a>
 		</li>
-		<li ng-class="{true: 'active'}[selectedTab === 'signup']"  class="info">
-			<a href="#tournament/{{tournament.id}}/live-results" data-toggle="tab"><b>Påmelding</b></a>
+		<li ng-class="{true: 'active'}[selectedTab === 'register']">
+			<a ui-sref="tournament.register.existing-player" data-toggle="tab"><b>Påmelding</b></a>
 		</li>
 	</ul>
 	</div>
