--- a/templates/tournament.register.new-player.html
+++ b/templates/tournament.register.new-player.html
@@ -9,7 +9,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Klubb:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="namesearch" placeholder="Spillernavn" />
+			<input type="text" class="form-control" id="namesearch" placeholder="Klubbnavn" />
 		</div>
 	</div>
 
