--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -7,7 +7,7 @@
 			<a ui-sref="tournament.info({tournamentId: tournament.id})" data-toggle="tab">Informasjon</a>
 		</li>
 		<li ng-class="{true: 'active'}[selectedTab === 'players']">
-			<a ui-sref="tournament.players" data-toggle="tab">Påmeldte</a>
+			<a ui-sref="tournament.players" data-toggle="tab">Spillere</a>
 		</li>
 		<li ng-class="{true: 'active'}[selectedTab === 'live']">
 			<a ui-sref="tournament.live" data-toggle="tab">Live resultater</a>
