alterations in data-scheme design

--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -25,12 +25,8 @@
 				<td>Deltakeravgift:</td>
 				<td>{{tournament.fee}}</td>
 			</tr>
-			<tr>
-				<td>Bankett:</td>
-				<td>{{tournament.banquet}}</td>
-			</tr>
 			<tr ng-repeat="misc in tournament.misc">
-				<td>{{misc.item}}</td>
+				<td>{{misc.item}}:</td>
 				<td>{{misc.value}}</td>
 			</tr>
 			<tr>
