alterations in data-scheme design

--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -11,7 +11,7 @@
 			</tr>
 			<tr>
 				<td>Påmeldingsfrist:</td>
-				<td>{{tournament.registrationDeadline | prettyprintDatestamp}}</td>
+				<td>{{tournament.deadline | prettyprintDatestamp}}</td>
 			</tr>
 			<tr>
 				<td>Antall påmeldte:</td>
