data-scheme modification

--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -14,10 +14,6 @@
 				<td>{{tournament.deadline | prettyprintDatestamp}}</td>
 			</tr>
 			<tr>
-				<td>Antall påmeldte:</td>
-				<td>{{tournament.registeredPlayersCount}}</td>
-			</tr>
-			<tr>
 				<td>Sted:</td>
 				<td>{{tournament.venue}}</td>
 			</tr>
@@ -37,7 +33,7 @@
 	</div>
 
 	<div class="col-xs-4 col-md-4">
-	<img ng-src="{{tournament.logo}}" 
+	<img ng-src="{{tournament.image}}" 
 		 style="text-align:center; vertical-align:middle; max-width:400px; max-height:400px; padding: 50px;"/>
 	</div>
 
