--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -14,6 +14,10 @@
 				<td>{{tournament.deadline | prettyprintDatestamp}}</td>
 			</tr>
 			<tr>
+				<td>Antall påmeldte:</td>
+				<td>{{tournament.registeredPlayersCount}}</td>
+			</tr>
+			<tr>
 				<td>Sted:</td>
 				<td>{{tournament.venue}}</td>
 			</tr>
@@ -33,7 +37,7 @@
 	</div>
 
 	<div class="col-xs-4 col-md-4">
-	<img ng-src="{{tournament.image}}" 
+	<img ng-src="{{tournament.logo}}" 
 		 style="text-align:center; vertical-align:middle; max-width:400px; max-height:400px; padding: 50px;"/>
 	</div>
 
