--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -37,7 +37,7 @@
 	</div>
 
 	<div class="col-xs-4 col-md-4">
-	<img ng-src="{{tournament.logo}}" 
+	<img ng-src="{{tournament.image}}" 
 		 style="text-align:center; vertical-align:middle; max-width:400px; max-height:400px; padding: 50px;"/>
 	</div>
 
