implemented days left to tournament

--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -7,7 +7,7 @@
 			</tr>
 			<tr>
 				<td>Dager igjen:</td>
-				<td><div id="dagerIgjen"></div></td>
+				<td>{{tournament.date | daysUntil}}</td>
 			</tr>
 			<tr>
 				<td>Påmeldingsfrist:</td>
