--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -14,10 +14,6 @@
 				<td>{{tournament.deadline | prettyprintDatestamp}}</td>
 			</tr>
 			<tr>
-				<td>Antall påmeldte:</td>
-				<td>{{tournament.registeredPlayersCount}}</td>
-			</tr>
-			<tr>
 				<td>Sted:</td>
 				<td>{{tournament.venue}}</td>
 			</tr>
@@ -37,7 +33,8 @@
 	</div>
 
 	<div class="col-xs-4 col-md-4">
-	<img ng-src="{{tournament.image}}" 
+	<img ng-show="tournament.image"
+		 ng-src="{{tournament.image}}" 
 		 style="text-align:center; vertical-align:middle; max-width:400px; max-height:400px; padding: 50px;"/>
 	</div>
 
@@ -50,7 +47,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row" ng-show="tournament.program.length > 0">
 <div class="col-md-10">
 <h3>Program</h3>
 <table class="table">
