added player count

--- a/templates/tournament.players.html
+++ b/templates/tournament.players.html
@@ -2,6 +2,8 @@
 		class="form-control"
 		ng-model="viewTournament"
 		ng-options="subtour.name for subtour in tournament.subtournaments"></select>
+<br />
+<p><b>Det er {{tournamentPlayers.length}} registrerte spillere i denne turneringen.</b></p>
 
 <table class="table table-hover">
 	<thead>
