--- a/templates/tournament.register.existing-player.html
+++ b/templates/tournament.register.existing-player.html
@@ -13,7 +13,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Søk på navn:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="namesearch" placeholder="Spillernavn" />
+			<input type="text" class="form-control" ng-model="ithfquery" id="namesearch" placeholder="Spillernavn" />
 		</div>
 	</div>
 	<div class="form-group">
@@ -25,7 +25,7 @@
 				size="5" 
 				style="width:100%;" 
 				ng-model="ithfSelectboxSelected"
-				ng-options="opt.name for opt in ithfSelectBox"
+				ng-options="opt.player for opt in ithfSelectBox"
 				ng-value="ithfSelectboxSelected=ithfSelectBox[0]"></select>
 		</div>
 	</div>
