added ithf player registration

--- a/templates/tournament.register.html
+++ b/templates/tournament.register.html
@@ -9,7 +9,7 @@
 					<a ng-click="activeTab = 'new-player'" ui-sref="tournament.register.new-player">Ny spiller</a>
 				</li>
 			</ul>
-			<div class="panel panel-body">
+			<div class="panel">
 				<div class="tab-content">
 					<div class="tab-pane" 
 						 id="existing_player"
