--- a/templates/tournament.register.existing-player.html
+++ b/templates/tournament.register.existing-player.html
@@ -1,12 +1,11 @@
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" ng-submit="registerIthfPlayer()">
 	<div class="form-group" ng-hide="tournament.subtournaments.length <= 1">
 		<label class="col-sm-2 control-label">Velg turnering:</label>
 		<div class="col-sm-10">
 			<select 
 				class="form-control"
 				ng-model="selectedTournament"
-				ng-options="subtour.name for subtour in tournament.subtournaments"
-				ng-value="selectedTournament = tournament.subtournaments[0]">
+				ng-options="subtour.name for subtour in tournament.subtournaments">
 			</select>
 		</div>
 	</div>
@@ -25,14 +24,11 @@
 				size="5" 
 				style="width:100%;" 
 				ng-model="ithfSelectboxSelected"
-				ng-options="opt.player for opt in ithfSelectBox"
-				ng-value="ithfSelectboxSelected=ithfSelectBox[0]"></select>
+				ng-options="opt.player + ' (' + opt.rank + ')' for opt in ithfSelectBox"></select>
 		</div>
 	</div>
 	<div class="form-group">
-		<div class="col-sm-10"></div>
-		<div class="col-sm-2">
-			<button class="btn btn-success btn-lg">Registrer</button>
-		</div>
+		<div class="col-sm-12"></div>
+			<button type="submit" ng-show="ithfSelectboxSelected" class="btn btn-lg btn-success center-block">Registrer som {{ithfSelectboxSelected.player}}</button>
 	</div>
 </form>
