--- a/templates/tournament.register.existing-player.html
+++ b/templates/tournament.register.existing-player.html
@@ -1,10 +1,10 @@
-<form class="form-horizontal" role="form" ng-submit="registerIthfPlayer()">
+<form class="form-horizontal" role="form" ng-submit="registerIthfPlayer(regform)">
 	<div class="form-group" ng-hide="tournament.subtournaments.length <= 1">
 		<label class="col-sm-2 control-label">Velg turnering:</label>
 		<div class="col-sm-10">
 			<select 
 				class="form-control"
-				ng-model="selectedTournament"
+				ng-model="regform.tournament"
 				ng-options="subtour.name for subtour in tournament.subtournaments">
 			</select>
 		</div>
@@ -12,7 +12,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Søk på navn:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="ithfquery" id="namesearch" placeholder="Spillernavn" />
+			<input type="text" class="form-control" ng-model="regform.namequery" id="namesearch" placeholder="Spillernavn" />
 		</div>
 	</div>
 	<div class="form-group">
@@ -23,12 +23,12 @@
 				class="form-control" 
 				size="5" 
 				style="width:100%;" 
-				ng-model="ithfSelectboxSelected"
-				ng-options="opt.player + ' (' + opt.rank + ')' for opt in ithfSelectBox"></select>
+				ng-model="regform.player"
+				ng-options="opt.player + ' (' + opt.rank + ')' for opt in regform.players"></select>
 		</div>
 	</div>
 	<div class="form-group">
 		<div class="col-sm-12"></div>
-			<button type="submit" ng-show="ithfSelectboxSelected" class="btn btn-lg btn-success center-block">Registrer som {{ithfSelectboxSelected.player}}</button>
+			<button type="submit" ng-show="regform.player && regform.tournament" class="btn btn-lg btn-success center-block">Registrer som {{regform.player.player}}</button>
 	</div>
 </form>
