--- a/templates/tournament.register.new-player.html
+++ b/templates/tournament.register.new-player.html
@@ -1,15 +1,26 @@
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" ng-submit="registerLocalPlayer(regform)">
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Turnering:</label>
+		<div class="col-sm-10">
+			<select 
+				class="form-control"
+				ng-model="regform.tournament"
+				ng-options="subtour.name for subtour in tournament.subtournaments">
+			</select>
+		</div>
+	</div>
+
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Navn:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="namesearch" placeholder="Spillernavn" />
+			<input type="text" class="form-control" ng-model="regform.player" id="namesearch" placeholder="Fornavn Etternavn" />
 		</div>
 	</div>
 	
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Klubb:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="namesearch" placeholder="Klubbnavn" />
+			<input type="text" class="form-control" ng-model="regform.club" id="namesearch" placeholder="Klubbnavn (Valgfri)" />
 		</div>
 	</div>
 
@@ -23,7 +34,7 @@
 	<div class="form-group">
 		<div class="col-sm-10"></div>
 		<div class="col-sm-2">
-			<button class="btn btn-success btn-lg">Registrer</button>
+			<button type="submit" class="btn btn-success btn-lg">Registrer</button>
 		</div>
 	</div>
 </form>
