--- a/templates/tournament.register.new-player.html
+++ b/templates/tournament.register.new-player.html
@@ -1,3 +1,6 @@
+<div class="bg-success" ng-show="regform.success == true"><p>{{regform.name}} er nå registrert til {{regform.tournament.name}}!</p></div>
+	<div class="bg-danger" ng-show="regform.success == false"><p>Noe gikk galt! Er spilleren allerede registrert? Det kan ta noen minutter før spillerlistene blir oppdatert. Vedvarer problemet kan turneringsansvarlig kontaktes.</p>
+	<p>(Error: {{regform.error}})</p></div>
 <form class="form-horizontal" role="form" ng-submit="registerLocalPlayer(regform)">
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Turnering:</label>
@@ -13,7 +16,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Navn:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="regform.player" id="namesearch" placeholder="Fornavn Etternavn" />
+			<input type="text" class="form-control" ng-model="regform.name" id="namesearch" placeholder="Fornavn Etternavn" />
 		</div>
 	</div>
 	
