--- a/templates/tournament.register.existing-player.html
+++ b/templates/tournament.register.existing-player.html
@@ -1,4 +1,4 @@
-<div class="bg-success" ng-show="regform.success == true"><p>{{regform.player.player}} er nå registrert til {{regform.tournament.name}}!</p></div>
+<div class="bg-success" ng-show="regform.success == true"><p>{{regform.player.player}} er nå registrert til {{regform.tournament.name}}!</p><p>Vær oppmerksom på at det kan ta noen minutter før nettsiden blir oppdatert.</p></div>
 	<div class="bg-danger" ng-show="regform.success == false"><p>Noe gikk galt! Er spilleren allerede registrert? Det kan ta noen minutter før spillerlistene blir oppdatert. Vedvarer problemet kan turneringsansvarlig kontaktes.</p>
 	<p>(Error: {{regform.error}})</p></div>
 <form class="form-horizontal" role="form" ng-submit="registerIthfPlayer(regform)">
@@ -7,8 +7,8 @@
 		<div class="col-sm-10">
 			<select 
 				class="form-control"
-				ng-model="regform.tournament"
-				ng-options="subtour.name for subtour in tournament.subtournaments">
+				ng-model="regform.subtournament"
+				ng-options="subtour as subtour.name for subtour in tournament.subtournaments">
 			</select>
 		</div>
 	</div>
@@ -27,11 +27,11 @@
 				size="5" 
 				style="width:100%;" 
 				ng-model="regform.player"
-				ng-options="opt.player + ' (' + opt.rank + ')' for opt in regform.players"></select>
+				ng-options="player as (player.player + ' (' + player.rank + ')') for player in regform.players"></select>
 		</div>
 	</div>
 	<div class="form-group">
 		<div class="col-sm-12"></div>
-			<button type="submit" ng-show="regform.player && regform.tournament" class="btn btn-lg btn-success center-block">Registrer som {{regform.player.player}}</button>
+			<button type="submit" ng-show="regform.player && regform.subtournament" class="btn btn-lg btn-success center-block">Registrer som {{regform.player.player}}</button>
 	</div>
 </form>
