mv & create login form

--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,1 +1,4 @@
-<div class="col-sm-12" style="bgcolor: white" ui-view></div>
+<div class="col-sm-12" style="background-color: white">
+	<h1>Administration</h1>
+	<div class="col-sm-12" ui-view></div>
+</div>
