--- a/templates/admin/admin.login.html
+++ b/templates/admin/admin.login.html
@@ -1,7 +1,9 @@
 <h2>Logg inn</h2>
-<div class="bg-danger" ng-show="regform.success == false">
-	<p>(Error: {{regform.error}})</p></div>
-<form class="form-horizontal" role="form" ng-submit="registerLocalPlayer(regform)">
+<div class="bg-danger" ng-show="loginform.success == false">
+	<p>(Error: {{regform.error}})</p>
+</div>
+
+<form class="form-horizontal" role="form" ng-submit="login(loginform)">
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Brukernavn:</label>
 		<div class="col-sm-10">
@@ -12,7 +14,7 @@
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Passord:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="loginform.password" id="namesearch" placeholder="Passord" />
+			<input type="password" class="form-control" ng-model="loginform.password" id="namesearch" placeholder="Passord" />
 		</div>
 	</div>
 
