--- a/templates/admin/admin.login.html
+++ b/templates/admin/admin.login.html
@@ -1,18 +1,17 @@
-<h2>Logg inn</h2>
 <div class="bg-danger" ng-show="loginform.success == false">
 	<p>(Error: {{regform.error}})</p>
 </div>
 
 <form class="form-horizontal" role="form" ng-submit="login(loginform)">
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Brukernavn:</label>
+		<label class="col-sm-2 control-label">Username:</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" ng-model="loginform.username" id="username" placeholder="Brukernavn" />
 		</div>
 	</div>
 	
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Passord:</label>
+		<label class="col-sm-2 control-label">Password:</label>
 		<div class="col-sm-10">
 			<input type="password" class="form-control" ng-model="loginform.password" id="namesearch" placeholder="Passord" />
 		</div>
@@ -21,7 +20,7 @@
 	<div class="form-group">
 		<div class="col-sm-10"></div>
 		<div class="col-sm-2">
-			<button type="submit" class="btn btn-success btn-lg">Logg inn</button>
+			<button type="submit" class="btn btn-success btn-lg">Login</button>
 		</div>
 	</div>
 </form>
