--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -1,4 +1,4 @@
 <div class="col-sm-12" style="background-color: white">
-	<h1>Administration</h1>
+	<h1>Administration</h1><br/>
 	<div class="col-sm-12" ui-view></div>
 </div>
