long time no seen

--- a/templates/admin/admin.tournaments.html
+++ b/templates/admin/admin.tournaments.html
@@ -1,7 +1,8 @@
-<button class="btn btn-success" ui-sref="admin.create">Create new tournament</button><hr>
+<button class="btn btn-success" ui-sref="admin.tournament">Create new tournament</button><hr>
 <b>Edit tournament:</b>
 <ul>
 	<li ng-repeat="tournament in tournaments">
-		<a ui-sref="admin.edit({tournamentId: tournament.id})">{{tournament.name}}</a>
+		<a ui-sref="admin.tournament({tournamentId: tournament.id})">{{tournament.name}}</a>
 	</li>
 </ul>
+<hr />
