--- a/templates/tournament.players.html
+++ b/templates/tournament.players.html
@@ -1,45 +1,17 @@
 <select ng-hide="tournamentPlayers.subtournaments.length <= 1"
 		class="form-control"
-		ng-model="viewTournament"
+		ng-model="viewSubTournament"
 		ng-options="subtour.name for subtour in tournament.subtournaments"></select>
 <br />
-<p><b>Det er {{tournamentPlayers.length}} registrerte spillere i denne turneringen.</b></p>
 
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th ng-click="sortPlayersBy('rank')" style="cursor:pointer">WR
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'rank'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'rank'"></span>
-			</th>
-			<th ng-click="sortPlayersBy('player')" style="cursor:pointer">Name 
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'player'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'player'"></span>
-			</th>
-			<th ng-click="sortPlayersBy('club')" style="cursor:pointer">Club 
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'club'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'club'"></span>
-			</th>
-			<th ng-click="sortPlayersBy('nation')" style="cursor:pointer">Nation 
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'nation'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'nation'"></span>
-			</th>
-			<th ng-click="sortPlayersBy('points')" style="cursor:pointer">Points 
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'points'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'points'"></span>
-			</th>
-			<th ng-click="sortPlayersBy('best')" style="cursor:pointer">Best score 
-				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'best'"></span>
-				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'best'"></span>
-			</th>
-		</tr>
-
-		<tr ng-repeat="player in tournamentPlayers">
-			<td>{{player.rank}}</td>
-			<td>{{player.player}}</td>
-			<td>{{player.club}}</td>
-			<td>{{player.nation}}</td>
-			<td>{{player.points}}</td>
-			<td>{{player.best}}</td>
-		</tr>
-</table>
+<div ng-switch="viewSubTournament.type">
+	<div ng-switch-when="individual">
+		<div ng-include="'templates/partials/subtournament.individual.html'"></div>
+	</div>
+	<div ng-switch-when="team_3">
+		<div ng-include="'templates/partials/subtournament.team_3.html'"></div>
+	</div>
+	<div ng-switch-default>
+		Vennligst velg en turnering.
+	</div>
+</div>
