--- a/templates/tournament.register.html
+++ b/templates/tournament.register.html
@@ -1,24 +1,38 @@
 <div class="row">
-	<div class="col-md-12">		
-		<div class="panel panel-default">
-			<ul class="nav nav-tabs">
-				<li ng-class="{true: 'active'}[activeTab === 'existing-player' || !activeTab]">
-					<a ng-click="activeTab = 'existing-player'" ui-sref="tournament.register.existing-player">Eksisterende spiller</a>
-				</li>
-				<li ng-class="{true: 'active'}[activeTab === 'new-player']">
-					<a ng-click="activeTab = 'new-player'" ui-sref="tournament.register.new-player">Ny spiller</a>
-				</li>
-			</ul>
-			<div class="panel">
-				<div class="tab-content">
-					<div class="tab-pane" 
-						 id="existing_player"
-						 ng-class="{true: 'active'}[activeTab === 'existing_player' || !activeTab]">
-					</div>
-					
-					<div class="panel panel-body" ui-view></div>
-				</div>
+	<div class="col-md-12">
+		<div class="form-group" ng-hide="tournament.subtournaments.length <= 1">
+			<label class="col-sm-2 control-label">Turnering:</label>
+			<div class="col-xs-10 col-sm-10">
+				<select 
+					class="form-control"
+					ng-model="regform.subtournament"
+					ng-options="subtour as subtour.name for subtour in tournament.subtournaments">
+				</select>
 			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<br />
+	<div class="bg-success col-md-12" ng-show="regform.success == true">
+		<p>Registrering OK!</p>
+		<p>Vær oppmerksom på at det kan ta noen minutter før nettsiden blir oppdatert.</p>
+	</div>
+	<div class="bg-danger col-md-12" ng-show="regform.success == false">
+		<p>Noe gikk galt! Er spilleren allerede registrert? Det kan ta noen minutter før spillerlistene blir oppdatert. Vedvarer problemet kan turneringsansvarlig kontaktes.</p>
+		<p>(Error: {{regform.error}})</p>
+	</div>
+
+	<div class="col-md-12" ng-switch="regform.subtournament.type">
+		<div ng-switch-when="individual">
+			<div ng-include="'templates/partials/regform.individual.html'"></div>
+		</div>
+		<div ng-switch-when="team_3">
+			<div ng-include="'templates/partials/regform.team_3.html'"></div>
+		</div>
+		<div ng-switch-default>
+			<br/><center>Vennligst velg en turnering.</center>
 		</div>
 	</div>
 </div>
