--- a/templates/all-tournaments.html
+++ b/templates/all-tournaments.html
@@ -2,6 +2,6 @@ Tournaments:
 
 <ul>
 	<li ng-repeat="tournament in tournaments">
-		<a href="#/{{tournament.id}}/info">{{tournament.name}}</a>
+		<a href="#/{{tournament.id}}/">{{tournament.name}}</a>
 	</li>
 </ul>
