fixed tournament selector visible when there is only one subtournament

--- a/templates/tournament.players.html
+++ b/templates/tournament.players.html
@@ -1,4 +1,4 @@
-<select ng-hide="tournamentPlayers.subtournaments.length <= 1"
+<select ng-hide="tournament.subtournaments.length <= 1"
 		class="form-control"
 		ng-model="viewSubTournament"
 		ng-options="subtour.name for subtour in tournament.subtournaments"></select>
