--- a/templates/tournament.register.html
+++ b/templates/tournament.register.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" ng-hide="tournament.subtournaments.length <= 1">
 	<div class="col-md-12">
-		<div class="form-group" ng-hide="tournament.subtournaments.length <= 1">
+		<div class="form-group">
 			<label class="col-sm-2 control-label">Turnering:</label>
 			<div class="col-xs-10 col-sm-10">
 				<select 
