renamed th "Player Value" => "Value"

--- a/templates/partials/subtournament.individual.html
+++ b/templates/partials/subtournament.individual.html
@@ -24,7 +24,7 @@
 				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'points'"></span>
 				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'points'"></span>
 			</th>
-			<th ng-click="sortPlayersBy('best')" style="cursor:pointer">Player Value
+			<th ng-click="sortPlayersBy('best')" style="cursor:pointer">Value
 				<span class="glyphicon glyphicon-sort" style="color: #A0A0A0; font-size: 12px;" ng-hide="orderedOn === 'best'"></span>
 				<span class="glyphicon glyphicon-sort" style="color: #383838; font-size: 12px;" ng-hide="orderedOn !== 'best'"></span>
 			</th>
