initial added team_5 tournaments

--- a/templates/tournament.players.html
+++ b/templates/tournament.players.html
@@ -11,6 +11,10 @@
 	<div ng-switch-when="team_3">
 		<div ng-include="'templates/partials/subtournament.team_3.html'"></div>
 	</div>
+
+	<div ng-switch-when="team_5">
+		<div ng-include="'templates/partials/subtournament.team_5.html'"></div>
+	</div>
 	<div ng-switch-default>
 		Vennligst velg en turnering.
 	</div>
