--- a/templates/tournament.register.html
+++ b/templates/tournament.register.html
@@ -31,6 +31,10 @@
 		<div ng-switch-when="team_3">
 			<div ng-include="'templates/partials/regform.team_3.html'"></div>
 		</div>
+
+		<div ng-switch-when="team_5">
+			<div ng-include="'templates/partials/regform.team_5.html'"></div>
+		</div>
 		<div ng-switch-default>
 			<br/><center>Vennligst velg en turnering.</center>
 		</div>
