--- a/templates/partials/regform.team_5.html
+++ b/templates/partials/regform.team_5.html
@@ -1,8 +1,3 @@
-
-<center>
-	<h5 class="text-warning">Lag kan bestå av 2 til 5 spillere.</h5><br/>
-</center>
-
 <form class="form-horizontal" 
 	  role="form" 
 	  ng-submit="register(regform)">
@@ -57,3 +52,9 @@
 					Registrer {{regform.teamName}}</button>
 	</div>
 </form>
+
+<div>
+	<center>
+		<h5 class="text-warning">Obs! Det er kun tillatt med 1 overgang mellom klubber per sesong. Det er lov å melde overgang hele sesongen. Dersom en spiller har meldt overgang til en klubb i november, må han/hun spille for den klubben under klubb-NM, uansett hvilken klubb han er i på det tidspunktet NM arrangeres.</h5>
+	</center>
+</div>
