--- a/templates/tournament.live.html
+++ b/templates/tournament.live.html
@@ -1,1 +1,8 @@
-Ingen livefeed tilgjengelig.
+<div class="col-md-12" ng-switch="tournament.id">
+	<div ng-switch-when="ko15">
+		<div>Følg med på turneringen direkte gjennom <a href="http://scorpion.hockeystiga.com/eng/tournament/id/842/">Scorpio</a></div>
+	</div>
+	<div ng-switch-default>
+		<br/>Ingen livefeed tilgjengelig...
+	</div>
+</div>
