--- a/templates/partials/regform.team_3.html
+++ b/templates/partials/regform.team_3.html
@@ -38,3 +38,9 @@
 					Registrer {{regform.teamName}}</button>
 	</div>
 </form>
+
+<div>
+	<center>
+		<h5 class="text-warning">Obs! Det er kun tillatt med 1 overgang mellom klubber per sesong. Det er lov å melde overgang hele sesongen. Dersom en spiller har meldt overgang til en klubb i november, må han/hun spille for den klubben under klubb-NM, uansett hvilken klubb han er i på det tidspunktet NM arrangeres.</h5>
+	</center>
+</div>
